fix text color, alignment, column radius, and associated css stylings

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,14 @@ img {
 }
 
 .box {
+  size: 100%;
   border-radius: 20px;
   border width: 2px;
   border-style: solid;
-  margin: 12px;
+}
+
+.box2 {
+  border-radius: 20px;
 }
 
 .column1 {
@@ -32,6 +36,7 @@ img {
   border: 4px solid rgb(83, 83, 83);
   padding: 4px;
 }
+
 .column2 {
   float: center;
   width: 30%;
@@ -41,6 +46,7 @@ img {
   border: 4px solid rgb(83, 83, 83);
   padding: 4px;
 }
+
 .column3 {
   float: right;
   width: 30%;
@@ -51,8 +57,36 @@ img {
   padding: 4px;
 }
 
+.column4 {
+  width: 30%;
+  margin: 12px;
+  border-radius: 20px;
+  background-color: rgb(110, 157, 175);
+  border: 4px solid rgb(83, 83, 83);
+  padding: 4px;
+}
+
+.column5 {
+  width: 30%;
+  margin: 12px;
+  border-radius: 20px;
+  background-color: rgb(110, 157, 175);
+  border: 4px solid rgb(83, 83, 83);
+  padding: 4px;
+}
+
+.column6 {
+  width: 30%;
+  margin: 12px;
+  border-radius: 20px;
+  background-color: rgb(110, 157, 175);
+  border: 4px solid rgb(83, 83, 83);
+  padding: 4px;
+}
+
 p {
   text-align: center;
+  color: white;
 }
 
 h1 {
@@ -71,4 +105,5 @@ a {
 
 h2 {
   text-align: center;
+  color: white;
 }
